last min resub fixes

--- a/supplement/supplement-main.Rmd
+++ b/supplement/supplement-main.Rmd
@@ -102,7 +102,7 @@ In practice we did not measure probabilistic credences directly, but rather aske
 Figure 1 shows an example of a simple Bayesian Network. The network itself is a _directed acyclic graph_ (DAG), a type of graphical model. Graphical models represent variables as nodes connected by edges. In a DAG, these edges are directed, flowing from parent to child, and are constrained so that they cannot form cycles or loops. In a Bayesian network, these directed edges encode conditional dependencies among variables, so that the conditional probability distribution for a given variable is defined only in terms of its direct parents. Together, a child node and its parents are called a _family_.
 
 
-```{r, out.width='100%', fig.align='center', fig.cap = 'Several examples illustrating different features of Bayesian Networks. \\newline A) A graphical representation of influence relations: Fire causes smoke. This influence is represented by the conditional dependencies captured in a conditional probability table (CPT). \\newline B) A “parent” node can be linked to multiple “children” and a “child” node can be linked to multiple “parents”: A child and its parents together compose a “family”. This graph has three families: {Accidents, lightning, drought, fire}, {fire, smoke}, and {fire, ash} described by a corresponding CPT (not pictured). \\newline C) Not all influence relations correspond to causation: A storm consists of rain, thunder, and lightning (marked as dashed arrows). Causes can be generative or preventive, e.g. rain prevents drought and fire (red arrows). Some nodes may exert countervailing influences on others: A storm consists of rain, which can prevent fires, but a storm also consists of lightning, which can cause fires. In addition, parents may influence their children independently or interactively. Lightning and accidents could be seen as independent causes of fire—an accident may cause a fire whether or not there is lightning, and vice versa. However, drought conditions interact with both of these other parent nodes, making them more likely to produce a fire. In the present work, we will consider only the role of independent influence relations.'}
+```{r, out.width='100%', fig.align='center', fig.cap = 'Several examples illustrating different features of Bayesian Networks. \\newline A) A graphical representation of influence relations: Fire causes smoke. This influence is represented by the conditional dependencies captured in a conditional probability table (CPT). \\newline B) A “parent” node can be linked to multiple “children” and a “child” node can be linked to multiple “parents”: A child and its parents together compose a “family”. This graph has three families: {Accidents, lightning, drought, fire}, {fire, smoke}, and {fire, ash} described by a corresponding CPT (not pictured). \\newline C) Not all influence relations correspond to causation: A storm consists of rain and lightning (marked as dashed arrows). Causes can be generative or preventive, e.g. rain prevents drought and fire (red arrows). Some nodes may exert countervailing influences on others: A storm consists of rain, which can prevent fires, but a storm also consists of lightning, which can cause fires. In addition, parents may influence their children independently or interactively. Lightning and accidents could be seen as independent causes of fire—an accident may cause a fire whether or not there is lightning, and vice versa. However, drought conditions interact with both of these other parent nodes, making them more likely to produce a fire. In the present work, we will consider only the role of independent influence relations.'}
 knitr::include_graphics("../paper/fig-bn-examples.png")
 ```
 
