--- a/paper/paper-papaja.Rmd
+++ b/paper/paper-papaja.Rmd
@@ -52,7 +52,7 @@ abstract: |
   <!-- https://tinyurl.com/ybremelq -->
   
 keywords          : "Intuitive theories; Belief revision; Vaccine attitudes; Cognitive modeling"
-wordcount         : "9161"
+wordcount         : "11853"
 
 bibliography      : ["../supplement/references.bib"]
 
@@ -85,7 +85,7 @@ One remarkable feature of human psychology is our ability to form rich mental re
 
 Because intuitive theories are such powerful tools for making sense of the world, when these theories are mistaken there can be serious consequences. In this paper, we focus on an important and timely example: misconceptions about vaccine safety.
 
-Even before the coronavirus pandemic, misconceptions about vaccine safety drove public health crises around the world. Undervaccination resulted in outbreaks of measles affecting over one thousand children across the United States in 2019, and over 80,000 children across Europe in 2018 [@thornton2019]. Misconceptions about childhood vaccination---particularly the fraudulent claim that vaccines cause autism or other dangerous side-effects---have proved remarkably difficult to correct [e.g., @betsch.sachse2013; @horne.etal2015; @lewandowsky.etal2012]. Sadly, only a handful of educational interventions have been found to improve vaccine attitudes [e.g., @dube.etal2015; @horne.etal2015; @vannice.etal2011; @wallace.etal2006]. This is especially  sobering in the context of the coronavirus pandemic: widespread reluctance to be vaccinated against COVID-19 threatens our ability to end a pandemic that has already claimed more than five million lives around the world.
+Even before the coronavirus pandemic, misconceptions about vaccine safety drove public health crises around the world. Undervaccination resulted in outbreaks of measles affecting over one thousand children across the United States in 2019, and over 80,000 children across Europe in 2018 [@thornton2019]. Misconceptions about childhood vaccination---particularly the fraudulent claim that vaccines cause autism or other dangerous side-effects---have proved remarkably difficult to correct [e.g., @betsch.sachse2013; @horne.etal2015; @lewandowsky.etal2012]. Sadly, only a handful of educational interventions have been found to improve vaccine attitudes [e.g., @dube.etal2015; @horne.etal2015; @vannice.etal2011; @wallace.etal2006; and for some other effective approaches see e.g. @gagneur.etal2018; @opel.etal2013]. This is especially sobering in the context of the coronavirus pandemic: widespread reluctance to be vaccinated against COVID-19 threatens our ability to end a pandemic that has already claimed more than five million lives around the world.
 
 The difficulty of convincing people to vaccinate themselves and their children illustrates a general pattern of findings showing that people often do not respond to evidence in ways that educators might wish [e.g. @lewandowsky.etal2012]. Part of the challenge in correcting misconceptions is that they are situated within larger, internally coherent belief systems---intuitive theories---that guide how people interpret and respond to evidence [e.g., @cook.lewandowsky2016; @gershman2019; @lewandowsky.etal2012; @jern.etal2014]. In particular, prior work suggests the "attitude roots" of vaccine skepticism may spread quite wide, with vaccine misconceptions correlated with quite distant beliefs about the world [@hornsey.etal2018].
 
@@ -134,7 +134,7 @@ We can leverage both of these facts to derive a model of people’s intuitive th
 
 Formulating these features in a formal model, rather than a verbal theory, allows us to specify not just the presence but the quantitative strength of these relations, and to simulate the cumulative influences of many factors in more complex networks (for example, incorporating beliefs about the frequency of wildfires, recent weather conditions, etc.). 
 
-Other network-based approaches have also been applied to model systematic relationships among beliefs and attitudes, such as neural network models [e.g. see @holyoak.powell2016; @holyoak.simon1999; @simon.etal2004; @thagard1989; @spellman.etal1993]. In these models, beliefs or attitudes are represented by nodes (neurons) connected by undirected or bi-directed edges—in contrast to the directed edges used in Bayesian Networks. One application of neural-network models has been the modeling of “coherence-shifts”: patterns of belief revision wherein the beliefs or attitudes that should putatively serve as inputs to an evaluation are themselves modified during the process of evaluation. However, the directed edges of Bayesian networks are similarly capable of capturing these coherent reasoning dynamics: When conditioning on a node within a network, information flows in both directions along the edges. To illustrate, consider how observing smoke will lead a reasoner to infer that there is a fire, just as readily as observing fire will lead them to predict there will be smoke.[^1] 
+Other network-based approaches have also been applied to model systematic relationships among beliefs and attitudes, such as neural network models [e.g. see @holyoak.powell2016; @holyoak.simon1999; @simon.etal2004; @thagard1989; @spellman.etal1993]. In these models, beliefs or attitudes are represented by nodes (neurons) connected by undirected or bi-directed edges---in contrast to the directed edges used in Bayesian Networks. One application of neural-network models has been the modeling of “coherence-shifts”: patterns of belief revision wherein the beliefs or attitudes that should putatively serve as inputs to an evaluation are themselves modified during the process of evaluation. However, the directed edges of Bayesian networks are similarly capable of capturing these coherent reasoning dynamics: When conditioning on a node within a network, information flows in both directions along the edges. To illustrate, consider how observing smoke will lead a reasoner to infer that there is a fire, just as readily as observing fire will lead them to predict there will be smoke.[^1] 
 
 [^1]: With this in mind, Bayesian Networks also offer potential models of coherence-based reasoning effects based on rational belief updating mechanisms [@jern.etal2014].
 
@@ -207,7 +207,7 @@ To apply our generative model principle, we sorted the 14 measured beliefs into 
 
 We used this sorting to induce a partial ordering of these 14 beliefs, stipulating that directed edges that violated this ordering must not appear in the final network of beliefs (e.g., that there should be no edge from *vaccine intentions* to *naturalism*, although there could be an edge from *naturalism* to *vaccine intentions*). 
 
-To conduct an efficient search through the super-exponential space of graphs, we tested several learning algorithms implemented in the “bnlearn” R package [@scutari2010] and evaluated their performance through cross validation. To avoid overfitting, we used an 80% split of the data (*n* = 904) for training, and reserved the remaining 20% for evaluating model performance. We compared performance of different structure learning algorithms using k-fold cross validation within the training split. Graphs were scored by Bayesian Information Criteria, an asymptotic estimate of the likelihood of the data under a given graph structure. Based on these results, we chose to apply a score-based "hill-climbing"  algorithm using our generative model constraints (see Supplementary Materials for details). Applying these techniques resulted in an estimate of the network shown in Figure 1. 
+To conduct an efficient search through the super-exponential space of graphs, we tested several learning algorithms implemented in the “bnlearn” R package [@scutari2010] and evaluated their performance through cross validation. To avoid overfitting, we used an 80% split of the data (*n* = 904) for training, and reserved the remaining 20% for evaluating model performance. We compared performance of different structure learning algorithms using k-fold cross validation within the training split. Graphs were scored by Bayesian Information Criteria, an asymptotic estimate of the likelihood of the data under a given graph structure. Based on these results, we chose to apply a score-based "hill-climbing"  algorithm using our generative model constraints (see Supplementary Materials for details). Applying these techniques resulted in an estimate of the network shown in Figure 2. 
 
 ```{r fig1-maingraph, fig.align='center', out.width="90%", fig.cap="Bayesian network cognitive model resulting from application of hill-climbing algorithm with our generative-model constraints applied to data in Study 1 training split (n = 904). The network has 29 edges connecting these 14 variables. Edge polarity and weights are indicated by color, with red hues indicating negative or preventive influences, and blue hues indicating positive or generating influences. The direction of the edge was not determinable from the data and modeling constraints for two edges: $\\text{Naturalism} \\rightarrow \\text{Holistic Balance}$ and $\\text{Medical Skepticism} \\rightarrow \\text{Parental Expertise}$; see Supplementary Materials."}
 
@@ -228,7 +228,7 @@ max_corr <- round(max(results$s1$validcorrs$cor),3)
 
 We evaluated the resulting cognitive model’s performance by testing its accuracy in predicting responses in the 20% testing split (*n* = 226). We generated predictions for held-out participants’ responses for each variable by conditioning the cognitive model network on the remaining 13 observed variables. Figure 3 compares the model’s predictions with participants’ actual responses. Collapsing across all variables, the average correlation between predicted and observed responses was *r* = `r round(avg_corr, 3)`, accounting for `r round(100*avg_corr^2, 0)`% of the variance in observed responses.
 
-Our goal in developing this cognitive model was to create a psychologically plausible and intelligible model of the intuitive theory surrounding vaccination decisions. However, it is also reasonable to ask whether other less-constrained models might be more predictive. To address this, we compared the Bayesian network model’s predictions to a suite of 14 naive “maximal” regression models, each using values on all 13 other belief scales as predictors for each belief. The model presented in Fig. 1---which we take to be simpler, more psychologically plausible, and more intelligible---performed as strongly as these "maximal" regression models (see Supplementary Materials).
+Our goal in developing this cognitive model was to create a psychologically plausible and intelligible model of the intuitive theory surrounding vaccination decisions. However, it is also reasonable to ask whether other less-constrained models might be more predictive. To address this, we compared the Bayesian network model’s predictions to a suite of 14 naive “maximal” regression models, each using values on all 13 other belief scales as predictors for each belief. The model presented in Figure 2---which we take to be simpler, more psychologically plausible, and more intelligible---performed as strongly as these "maximal" regression models (see Supplementary Materials).
 
 ```{r fig2-validation, fig.align='center', out.width="100%", fig.cap="Observed responses and cognitive model predictions for each belief among participants in the Study 1 testing split. Correlations between observed and predicted values ranged from .380 to .898 across the different belief scales. In general, the model showed greater predictive accuracy for more central beliefs (e.g., \\emph{vaccine danger}) than for more peripheral beliefs (e.g., \\emph{parental protectiveness}; see Supplementary Materials for details)."}
 knitr::include_graphics("../local/valid_plt.png")
@@ -254,7 +254,7 @@ From a set of potentially relevant beliefs and a general principle guiding the l
 
 ## Study 2: Targeting disease severity beliefs
 
-Very few educational interventions have been shown to improve attitudes toward childhood vaccination. One of the few successful educational interventions in this domain was tested by Horne and colleagues [-@horne.etal2015], who found that emphasizing the dangers of preventable diseases like mumps, measles, and rubella improved participants’ attitudes toward vaccines. Their intervention included descriptions of the symptoms of mumps, measles, and rubella; vivid photos of children suffering from these diseases; and a brief story from the perspective of a parent whose child was hospitalized with measles (see Supplementary Materials). This “disease risk” intervention improved attitudes toward vaccines compared to an irrelevant control essay and compared to an intervention aimed at debunking concerns about vaccines causing autism. In Study 2, we aimed to replicate this success and leverage the cognitive model developed in Study 1 to gain insight into how and why such an intervention successfully induces  belief revision in this domain.
+Only a handful of educational interventions have been shown to improve attitudes toward childhood vaccination. One of the successful educational interventions in this domain was tested by Horne and colleagues [-@horne.etal2015], who found that emphasizing the dangers of preventable diseases like mumps, measles, and rubella improved participants’ attitudes toward vaccines. Their intervention included descriptions of the symptoms of mumps, measles, and rubella; vivid photos of children suffering from these diseases; and a brief story from the perspective of a parent whose child was hospitalized with measles (see Supplementary Materials). This “disease risk” intervention improved attitudes toward vaccines compared to an irrelevant control essay and compared to an intervention aimed at debunking concerns about vaccines causing autism. In Study 2, we aimed to replicate this success and leverage the cognitive model developed in Study 1 to gain insight into how and why such an intervention successfully induces  belief revision in this domain.
 
 In Study 2, we used the cognitive model established in Study 1 to predict how Horne and colleagues’ [-@horne.etal2015] intervention would affect the beliefs in this network, including people’s intentions to vaccinate their children. Participants completed the 14 belief scales from Study 1, then returned two days later to complete either the disease risk intervention or a no-intervention control, followed by the same 14 belief scales.
 
