--- a/supplement/references.bib
+++ b/supplement/references.bib
@@ -375,7 +375,7 @@
 }
 
 @article{griffiths.tenenbaum2005,
-  title = {Structure and Strength in Causal Induction\ding{73}},
+  title = {Structure and Strength in Causal Induction},
   author = {Griffiths, Thomas L. and Tenenbaum, Joshua B.},
   year = {2005},
   month = dec,
@@ -1058,3 +1058,37 @@
   langid = {english},
   file = {/Users/dmpowell/Zotero/storage/LVY6HCIY/Thagard - 1989 - Explanatory Coherence.pdf}
 }
+
+@article{gagneur.etal2018,
+	title = {Motivational interviewing: {A} promising tool to address vaccine hesitancy},
+	volume = {36},
+	issn = {0264410X},
+	shorttitle = {Motivational interviewing},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0264410X17314573},
+	doi = {10.1016/j.vaccine.2017.10.049},
+	language = {en},
+	number = {44},
+	urldate = {2022-09-27},
+	journal = {Vaccine},
+	author = {Gagneur, Arnaud and Gosselin, Virginie and Dubé, Ève},
+	month = oct,
+	year = {2018},
+	pages = {6553--6555},
+}
+
+@article{opel.etal2013,
+	title = {The {Architecture} of {Provider}-{Parent} {Vaccine} {Discussions} at {Health} {Supervision} {Visits}},
+	volume = {132},
+	issn = {0031-4005, 1098-4275},
+	url = {http://pediatrics.aappublications.org/cgi/doi/10.1542/peds.2013-2037},
+	doi = {10.1542/peds.2013-2037},
+	language = {en},
+	number = {6},
+	urldate = {2021-03-12},
+	journal = {PEDIATRICS},
+	author = {Opel, D. J. and Heritage, J. and Taylor, J. A. and Mangione-Smith, R. and Salas, H. S. and DeVere, V. and Zhou, C. and Robinson, J. D.},
+	month = dec,
+	year = {2013},
+	pages = {1037--1046},
+}
+
